--- a/public/processing/index.html
+++ b/public/processing/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="canonical" itemprop="url" href="/">
     <link rel="stylesheet" href="">
-    <script src="../processing.min.js"></script>
+    <script src="./processing.min.js"></script>
     <script type="text/processing" data-processing-target="mycanvas">
 void setup() {
-  size(300, 200);
+  size(600, 400);
   background(155);
   smooth();
 }
